// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getScores 1`] = `
[
  1.5,
  1,
  0.5,
  0,
]
`;

exports[`getScores 2`] = `
[
  1.5,
  1,
  0.5,
  0,
]
`;

exports[`getScores 3`] = `
[
  4.5,
  3,
  1.5,
  0,
]
`;

exports[`getScores 4`] = `
[
  4.5,
  3,
  1.5,
  0,
]
`;

exports[`getScores with 0 votes 1`] = `
[
  0,
  0,
  0,
]
`;

exports[`getScores with mixed voting powers 1`] = `
[
  668334.3333333333,
  334167.1666666666,
  0,
]
`;

exports[`getScoresByStrategy 1`] = `
[
  [
    1.5,
  ],
  [
    1,
  ],
  [
    0.5,
  ],
  [
    0,
  ],
]
`;

exports[`getScoresByStrategy 2`] = `
[
  [
    1.5,
  ],
  [
    1,
  ],
  [
    0.5,
  ],
  [
    0,
  ],
]
`;

exports[`getScoresByStrategy 3`] = `
[
  [
    1.5,
    1.5,
    1.5,
  ],
  [
    1,
    1,
    1,
  ],
  [
    0.5,
    0.5,
    0.5,
  ],
  [
    0,
    0,
    0,
  ],
]
`;

exports[`getScoresByStrategy 4`] = `
[
  [
    1.5,
    1.5,
    1.5,
  ],
  [
    1,
    1,
    1,
  ],
  [
    0.5,
    0.5,
    0.5,
  ],
  [
    0,
    0,
    0,
  ],
]
`;

exports[`getScoresByStrategy normalizes correctly 1`] = `
[
  [
    7.5,
    22.5,
  ],
  [
    7.5,
    22.5,
  ],
  [
    7.5,
    22.5,
  ],
]
`;

exports[`getScoresTotal 1`] = `3`;

exports[`getScoresTotal 2`] = `9`;
